# fftlib

./: .cproject  .gitignore  .gitlab-ci.yml  .md5sums  .project  README.md  build.sh  fftlib.spd.xml  fftlib.spd.xml.in  fftlib.spec  makefile  rh.fftlib.spec
Release/src/: subdir.mk
cpp/: .md5sums  Makefile.am  Makefile.am.ide  build.sh  configure.ac  fftlib.pc.in  reconf  rh.fftlib.pc.in
cpp/include/: Autocorrelate.h  FftwThreadCoordinator.h  fft.h  fftw_allocator.h  firfilter.h
cpp/src/: Autocorrelate.cpp  FftwThreadCoordinator.cpp  fft.cpp  firfilter.cpp
inc/: Autocorolate.h  Autocorrelate.h  firfilter.h
src/: Autocorolate.cpp  Autocorrelate.cpp  firfilter.cpp
